# darkweb-scanner

./: .env.example  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.tor  LEGAL.md  LICENSE  Makefile  README.md  SECURITY.md  TELEGRAM.md  deploy.sh  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
config/: keywords.example.yaml  seeds.example.txt
docker/app/: Dockerfile
docker/nginx/: entrypoint.sh
docker/nginx.bak.20260222_091420/: Dockerfile  entrypoint.sh  nginx.conf
docker/tor/: Dockerfile  torrc
docs/: deployment.md  digest.md  dns.md  paste_monitor.md  projects.md  telegram.md
scripts/: configure-ssl.sh  migrate_sqlite_to_postgres.py
src/darkweb_scanner/: __init__.py  alerting.py  auth.py  channel_monitor.py  crawler.py  digest.py  dns_crawler.py  feeds.py  investigations.py  ip_lookup.py  main.py  paste_monitor.py  ransomware_data.py  ransomware_live.py  scanner.py  storage.py  storage.py.bak  telegram_scraper.py  threat_actors.py  tor_client.py
src/darkweb_scanner/dashboard/: app.py  auth_routes.py  channel_monitor_routes.py  dashboard_routes.py  public_routes.py  ransomware_live_routes.py  storage_helper.py
src/darkweb_scanner/dashboard/templates/: force_change_password.html  index.html  index.html.bak  login.html  register.html  totp_setup.html  totp_verify.html
tests/integration/: test_tor_connection.py
tests/unit/: test_crawler.py  test_scanner.py
