[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "darkweb-scanner"
version = "0.1.0"
description = "Keyword monitoring tool for .onion sites — for legitimate security research and threat intelligence"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["tor", "dark-web", "threat-intelligence", "osint", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
]

dependencies = [
    "aiohttp>=3.9",
    "aiohttp-socks>=0.8",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "stem>=1.8",
    "sqlalchemy>=2.0",
    "pyyaml>=6.0",
    "click>=8.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dashboard = [
    "flask>=3.0",
    "gunicorn>=21.0",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.7",
    "bandit>=1.7",
    "types-PyYAML",
    "types-beautifulsoup4",
]
all = [
    "darkweb-scanner[dashboard]",
]

[project.scripts]
darkweb-scanner = "darkweb_scanner.main:main"

[project.urls]
Homepage = "https://github.com/osintph/darkweb-scanner"
Repository = "https://github.com/osintph/darkweb-scanner"
Issues = "https://github.com/osintph/darkweb-scanner/issues"

[tool.setuptools.packages.find]
where = ["src"]

# ── Ruff (linting) ─────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "RET", "SIM"]
ignore = ["E501", "B008"]

# ── Mypy (type checking) ────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true

# ── Pytest ──────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=darkweb_scanner --cov-report=term-missing"
